feature: api test

--- a/front/style.scss
+++ b/front/style.scss
@@ -209,4 +209,9 @@ body {
         text-transform: capitalize;
         padding-top: 30px !important;
     }
+
+    .fc-event-title-container {
+        background-color: #4D75F2 !important;
+        padding: 8px !important;
+    }
 }
